--- a/SAW_GOOD/src/main/webapp/resources/se2/SmartEditor2Skin.html
+++ b/SAW_GOOD/src/main/webapp/resources/se2/SmartEditor2Skin.html
@@ -22,7 +22,7 @@
 
 
 
-<!-- <span id="rev">Version: 2.8.2.4259f59 </span> -->
+<span id="rev">Version: 2.8.2.4259f59 </span>
 
 <!-- SE2 Markup Start -->	
 <div id="smart_editor2">
@@ -33,7 +33,6 @@
 			<ul class="se2_font_type">
 				<li class="husky_seditor_ui_fontName"><button type="button" class="se2_font_family" title="글꼴"><span class="husky_se2m_current_fontName">글꼴</span></button>
 					<!-- 글꼴 레이어 -->
-				    
 					<div class="se2_layer husky_se_fontName_layer">
 						<div class="se2_in_layer">
 							<ul class="se2_l_font_fam">
